--- a/frontend/src/styles/sets.css
+++ b/frontend/src/styles/sets.css
@@ -147,4 +147,6 @@
 
 .no-sets {
   font-family: "Spline Sans";
+  color: var(--subheading);
+
 }
